<resources>
    <string name="aisle">Allée</string>
    <string name="any_command_find">Aucune commande à faire</string>
    <string name="any_product_finded">"Aucun produit trouvé avec ce code barre. Veuillez réesayer"</string>
    <string name="any_user_finded">"Aucun utilisateur trouvé avec ce code barre. Veuillez réesayer"</string>
    <string name="app_name">Logistic Glasses</string>
    <string name="cannot_quit_command_pending">Impossible de quitter : Commande en cours !</string>
    <string name="end_command">Commande finie</string>
    <string name="enter_quantity">Saisir la quantité prise de ce produit</string>
    <string name="exit">Quitter</string>
    <string name="exit_pending">Fermeture en cours …</string>
    <string name="find">Trouvé !</string>
    <string name="is_located">se situe</string>
    <string name="new_command">Nouvelle commande</string>
    <string name="next_product">Prochain produit :</string>
    <string name="not_defined_product_name">Nom du produit non défini!</string>
    <string name="not_defined_product_ref">Réf du produit non défini!</string>
    <string name="not_defined_product_location">Location du produit non défini!</string>
    <string name="not_defined_product_quantity">x Non défini!</string>
    <string name="unknown">Inconnu!</string>
    <string name="pull_in_cart">Mis dans le panier !</string>
    <string name="rack">Etagère</string>
    <string name="rack_location">Emplacement étagère</string>
    <string name="scan_cb">Scan du code barre</string>
    <string name="search_user_pending">Recherche de l\'utilisateur en cours …</string>
    <string name="search_command_pending">Recherche d\'une commande en cours …</string>
    <string name="sign_in">S\'authentifier</string>
    <string name="sign_out">Se desauthentifier</string>
    <string name="show_barcode_badge">Scannez votre badge</string>
    <string name="show_barcode_product">Montrer le code barre du produit dans la zone encadrée en vert de la caméra de votre appareil</string>
    <string name="user_finded">Utilisateur trouvé</string>
    <string name="welcome">Bienvenue</string>
    <string name="goto_depot">Déposer commande finie.</string>
    <string name="missing">Manquant</string>
</resources>
